--- a/main.html
+++ b/main.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<section class="left">
+		
+		<div class="up">
+			<img alt="img" width="200px" height="100px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVikMmHeqpWigec79k95NE1KYQbQ34Ifz53A&s">
+			<div>
+			<span>Name</span>
+			<span>Neha</span>
+				<br>
+			<span>Email</span>
+			<span>neha@email.com</span>
+				<br>
+			<span>Profile</span>
+			<span>MERN DEVELOPER</span>
+			</div>
+		</div>
+		<div>
+			<h2>Skills</h2>
+			
+		</div>
+	</section>
+	<section class="right">
+		<h2>About me</h2>
+		<p>Additionally, the webpage should be a well-versed, decorated version of your resume, including your picture. Use icons, badges, and percentage bars to graphically depict your skills, and highlight your relative strengths and weaknesses.</p>
+	</section>
+	
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
+
 
